prover-ray/zkcdriver/testdata/synced/invalid/type_07.zkc
//error:4:1-11:cyclic definition for Y
type outer1 = outer2
type outer2 = Y
type Y = Z
type Z = Y
